plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'com.diffplug.spotless' version '6.23.3'
}

group = 'com.ripple'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' } // Spring AI 저장소 추가
}

dependencies {
    //Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'junit:junit:4.13.1'

    //Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //Database
    implementation 'com.h2database:h2'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    //Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //OAuth2
    implementation 'org.springframework.security:spring-security-oauth2-client'
    implementation platform('org.springframework.boot:spring-boot-dependencies:3.3.5')
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    //JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //Spring WebFlux
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Apache POI for reading Excel files
    implementation 'org.apache.poi:poi:5.2.3'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'

    // Netty
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'

    // querydsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // jsoup
    implementation 'org.jsoup:jsoup:1.18.3'

    // amazon s3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    //spring AI
    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:0.8.0'
    
    // JACKSON
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // SSE
    implementation 'org.springframework.boot:spring-boot-starter-web-services'

}

clean {	delete file('src/main/generated')}

tasks.named('test') {
    useJUnitPlatform()
}

/**
 * Spotless 설정
 */
spotless {
    java {
        importOrder(
                "java",
                "javax",
                "lombok",
                "org.springframework",
                "",
                "\\#",
                "org.junit",
                "\\#org.junit",
                "com.guide",
                "\\#com.guide"
        )                        // import 순서 정의
        removeUnusedImports()    // 사용하지 않는 import 제거
        googleJavaFormat()       // 구글 자바 포맷 적용
        indentWithTabs(2)
        indentWithSpaces(4)
        trimTrailingWhitespace() // 공백 제거
        endWithNewline()         // 끝부분 New Line 처리
    }
}

/**
 * pre-commit hook 설정, 커밋 or Push 시 spotlessApply task 실행
 */
tasks.register('updateGitHooks', Copy) {
    from new File(rootProject.rootDir, 'scripts/pre-commit')
    into { new File(rootProject.rootDir, '.git/hooks') }
    if (System.getProperty('os.name').toLowerCase().contains('windows')) {
        Runtime.getRuntime().exec("cmd /c chmod -R +x .git/hooks/")
    } else {
        Runtime.getRuntime().exec("chmod -R +x .git/hooks/")
    }
}

/**
 * compileJava task에 spotlessApply, updateGitHooks task 추가
 */
tasks.named('compileJava') {
    dependsOn 'spotlessApply'
    dependsOn 'updateGitHooks'
}